[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/map/Square.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/map/Row.gd" type="Script" id=2]
[ext_resource path="res://assets/map/garden.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 530.5, 10 )

[node name="Row" type="Area2D"]
collision_layer = 512
collision_mask = 1024
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -435, -681 )
scale = Vector2( 1.5, 1.05 )
texture = ExtResource( 3 )
centered = false

[node name="Square1" parent="." instance=ExtResource( 1 )]

[node name="Square2" parent="." instance=ExtResource( 1 )]
position = Vector2( 125, 0 )

[node name="Square3" parent="." instance=ExtResource( 1 )]
position = Vector2( 250, 0 )

[node name="Square4" parent="." instance=ExtResource( 1 )]
position = Vector2( 370, 0 )

[node name="Square5" parent="." instance=ExtResource( 1 )]
position = Vector2( 490, 0 )

[node name="Square6" parent="." instance=ExtResource( 1 )]
position = Vector2( 610, 0 )

[node name="Square7" parent="." instance=ExtResource( 1 )]
position = Vector2( 725, 0 )

[node name="Square8" parent="." instance=ExtResource( 1 )]
position = Vector2( 850, 0 )

[node name="Square9" parent="." instance=ExtResource( 1 )]
position = Vector2( 985, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 495.5, 0 )
scale = Vector2( 1, 3.7 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Row_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Row_body_exited"]
[connection signal="squareEntered" from="Square1" to="." method="_on_Square1_squareEntered"]
[connection signal="squareEntered" from="Square2" to="." method="_on_Square2_squareEntered"]
[connection signal="squareEntered" from="Square3" to="." method="_on_Square3_squareEntered"]
[connection signal="squareEntered" from="Square4" to="." method="_on_Square4_squareEntered"]
[connection signal="squareEntered" from="Square5" to="." method="_on_Square5_squareEntered"]
[connection signal="squareEntered" from="Square6" to="." method="_on_Square6_squareEntered"]
[connection signal="squareEntered" from="Square7" to="." method="_on_Square7_squareEntered"]
[connection signal="squareEntered" from="Square8" to="." method="_on_Square8_squareEntered"]
[connection signal="squareEntered" from="Square9" to="." method="_on_Square9_squareEntered"]
